[package]
name = "joyscript"
version = "0.1.0"
authors = ["Mark Friedenbach <mark@friedenbach.org>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = { version = "0.5", features = [
    "eq-separator",
    "short-space-opt"
]}
rustyline = "13.0.0"
